--- a/coq-algorand.opam
+++ b/coq-algorand.opam
@@ -18,11 +18,13 @@ a formal proof of safety for the transition system."""
 build: ["dune" "build" "-p" name "-j" jobs]
 depends: [
   "dune" {>= "2.5"}
-  "coq" {>= "8.14"}
-  "coq-mathcomp-ssreflect" {>= "1.14"}
+  "coq" {>= "8.16"}
+  "coq-mathcomp-ssreflect" {>= "2.0.0"}
   "coq-mathcomp-algebra" 
-  "coq-mathcomp-finmap" {>= "1.5.1"}
-  "coq-mathcomp-analysis" {>= "0.5.0"}
+  "coq-hierarchy-builder" {>= "1.4.0"}
+  "coq-mathcomp-finmap" {>= "2.0.0"}
+  "coq-mathcomp-classical" {>= "1.1.0"}
+  "coq-mathcomp-analysis" {>= "1.1.0"}
   "coq-mathcomp-zify" 
   "coq-record-update" 
 ]
